--- a/bufsbus-server/package.json
+++ b/bufsbus-server/package.json
@@ -23,8 +23,10 @@
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
     "pm2": "^5.1.1",
-    "retry-axios": "^2.6.0"
+    "retry-axios": "^2.6.0",
+    "typeorm": "^0.2.37"
   }
 }
