:feature Add all bus data

--- a/bufsbus-server/Dockerfile
+++ b/bufsbus-server/Dockerfile
@@ -3,9 +3,9 @@ FROM node:14-slim
 COPY . /bufs-bus
 WORKDIR /bufs-bus
 
-RUN npm install
+RUN npm ci --only=production
 RUN npm install -g pm2
 
 EXPOSE 3000
 
-CMD ["npm", "run", "prod"]
+CMD ["pm2-runtime", "index.js"]
