--- a/bufsbus-server/package.json
+++ b/bufsbus-server/package.json
@@ -4,8 +4,7 @@
   "description": "BUFS Bus time check",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start",
-    "prod": "pm2 start && pm2 log"
+    "start": "pm2 start && pm2 log"
   },
   "repository": {
     "type": "git",
@@ -24,6 +23,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
     "path": "^0.12.7",
     "pm2": "^5.1.1",
     "retry-axios": "^2.6.0",
