fix schedule try catch

--- a/bufsbus-server/Dockerfile
+++ b/bufsbus-server/Dockerfile
@@ -2,10 +2,12 @@ FROM node:14-slim
 
 COPY . /bufs-bus
 WORKDIR /bufs-bus
-
+RUN apt update && apt install curl -y
 RUN npm ci --only=production
 RUN npm install -g pm2
 
 EXPOSE 3000
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 CMD curl --fail http://localhost:3000/api || exit 1
 
 CMD ["pm2-runtime", "start", "ecosystem.config.js", "--env", "production"]
