edit github actions

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -16,5 +16,6 @@ jobs:
         port: ${{ secrets.SSH_PORT }}
         script: |
           cd /home/jsg3600/bufsbus-docker
+          pwd
           git pull
-          sh start.sh
+          sh /home/jsg3600/bufsbus-docker/start.sh
