fix mysql conn -> pool

--- a/bufsbus-server/Dockerfile
+++ b/bufsbus-server/Dockerfile
@@ -8,6 +8,6 @@ RUN npm install -g pm2
 
 EXPOSE 3000
 
-HEALTHCHECK --interval=10s --timeout=3s --start-period=30s --retries=1 CMD curl --fail http://localhost:3000/api || exit 1
+HEALTHCHECK --interval=5s --timeout=2s --start-period=30s CMD curl --fail http://localhost:3000/api || kill 1
 
 CMD ["pm2-runtime", "start", "ecosystem.config.js", "--env", "production"]
