--- a/bufsbus-server/package.json
+++ b/bufsbus-server/package.json
@@ -22,12 +22,12 @@
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fast-xml-parser": "^3.21.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "node-schedule": "^2.0.0",
     "path": "^0.12.7",
     "pm2": "^5.1.1",
-    "retry-axios": "^2.6.0",
-    "typeorm": "^0.2.37"
+    "retry-axios": "^2.6.0"
   }
 }
